# ardupaddle

./: Cargo.toml  README.md  ardupaddle.ino
.cargo/: config.toml
src/: main.rs  timings.rs
